Fixes spacing issue

--- a/assets/css/source/_asistencia_detail.scss
+++ b/assets/css/source/_asistencia_detail.scss
@@ -77,7 +77,8 @@
 
             .cancel{
                 width: 20px;
-
+                margin-right: 15px;
+                
                 @include for-phone-landscape-up{
                     padding-top: 10px;
                     width: 30px;
